--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       document.getElementById('client-debug').classList.remove('hidden');
     }
 
-    const BACKEND_URL = 'https://script.google.com/macros/s/AKfycbyW4Qg6s9mpSixQdrUkQyBQ_7R1LexpzZneaTGKMgsrIJlFnPvGEtlEVQr17Q7cdaCGjA/exec';
+    const BACKEND_URL = 'https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLj2vOHgF6MkiMrkgjvJXICtbhx4lYXNH21WKsfN1ts8Pt8TEhSrsHb__7Uaq0pywWeF5FhbTyE01eCIWOdvtYRJuJd0lki32AF3S3f24y2pEj8xolMAPtAW3mvzWOpnkbzYNbP33ezAoybN6XdyfbboDph_UGUDf3ebKS7JeyGi9uyba293JV48qJJnQ9pgceBqwxxDf1ZYbKsAcvJyf8YH4KKCvqwHdKSrUigXEveBx5hfg4U11-wWKE3RuZ-B9JJLzE-mnNCzTJenSGLaTZmhgsYHRTjsW5w9cQj8&lib=MiPWSv-88jyxBGJVQH_cgRlDHli5JueOC';
     const IS_GITHUB_PAGES = /github\.io$/i.test(location.hostname);
     function showConfigWarning(msg){
       const w = document.getElementById('config-warning');
