--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       document.getElementById('client-debug').classList.remove('hidden');
     }
 
-    const BACKEND_URL = 'https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLijb4n0OFpwYiCaTQpil1BoYS_lZsiqwE57G-V2jdH2z1vOKm5T9g9aLPfPJgoKMRVnyATN7BG5uVF5N1iDrHcU9WFlkBesw2q5Ye_NpUthjN1cFPK9Ub40Pphu-KjcdBh31Rrvg_t5s4VtdwlTiKULPDZ-JIwVmLNee6YaM8X969mI0knKuih6GbfaPZjBEUkSu62dy9ysI17ySVY1w8L4_j8sQFbdb0y6AnOzwwCqnRlFkUbz4zSr63SZ0K2TGnMG771JYA0x2TZkYRFAMsgp0q7Og2NXcv-FkU1P&lib=MiPWSv-88jyxBGJVQH_cgRlDHli5JueOC';
+    const BACKEND_URL = 'https://script.google.com/macros/s/AKfycbyW4Qg6s9mpSixQdrUkQyBQ_7R1LexpzZneaTGKMgsrIJlFnPvGEtlEVQr17Q7cdaCGjA/exec';
     const IS_GITHUB_PAGES = /github\.io$/i.test(location.hostname);
     function showConfigWarning(msg){
       const w = document.getElementById('config-warning');
