--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
             <div class="sm:col-span-2">
               <label for="email" class="label">Work email<span class="text-red-500"> *</span></label>
-              <input id="email" name="email" type="email" inputmode="email" required autocomplete="email" class="field mt-1 w-full" />
+              <input id="email" name="email" type="email" inputmode="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required autocomplete="email" class="field mt-1 w-full" />
             </div>
           </div>
 
