--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h1 class="mt-3 text-4xl md:text-5xl font-bold tracking-tight leading-[1.1]">Secure Funding Faster</h1>
 
         <form id="lead-form" novalidate>
-          <h2 class="text-xl font-semibold">Tell us about your company</h2>
+          <h2 class="text-xl font-semibold">Tell us about your company to get a free walkthrough of the Scout AI grant writing engine.</h2>
           <!-- Name / Email -->
           <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 gap-4">
             <div>
@@ -150,6 +150,7 @@
       <div>
         <div class="mt-6">
           <img src="https://scoutclimate.com/homepage/platform.png" alt="Scout platform interface" class="mt-8 w-full rounded-lg border border-[color:var(--line)]" />
+          <p style="margin-top:20px;">Get expert-level results without expert-level costs. Scout delivers AI-powered proposal writing with human expertise — faster, more affordable, and built to win.</p>
         </div>
         
         <!-- Optional diagnostics UI (only shown when ?debug=1) -->
