--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Scout — Secure Funding Faster</title>
   <meta name="description" content="Scout is the AI proposal-writing platform built by founders, for founders. Tell us about your company and we’ll match you to the right non-dilutive funding and set up a quick intro." />
+  <link rel="icon" type="image/png" href="https://scoutclimate.com/favicon.png">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
