changing funding types

--- a/index.html
+++ b/index.html
@@ -141,11 +141,14 @@
             <label for="fundraising_status" class="label">Current fundraising status</label>
             <select id="fundraising_status" name="fundraising_status" class="field mt-1 w-full">
               <option value="">Select…</option>
-              <option>Not raising</option>
-              <option>Considering a raise</option>
-              <option>Raising soon (0–3 months)</option>
-              <option>Actively raising</option>
-              <option>Recently raised</option>
+              <option>Self Funded</option>
+              <option>Friends & Family / Angel</option>
+              <option>Pre-Seed</option>
+              <option>Seed</option>
+              <option>Series-A</option>
+              <option>Series-B+</option>
+              <option>Nonprofit / Academic</option>
+              <option>Government funded</option>
             </select>
           </div>
 
