--- a/index.html
+++ b/index.html
@@ -392,26 +392,33 @@ function gtag_report_conversion(url) {
       };
 
       try {
-        const r = await submitLead(payload);
-        document.getElementById('form').innerHTML = `
-          <div class="p-10 text-center">
-            <h2 class="text-2xl font-semibold">Thank you! We'll be in touch.</h2>
-            <p class="mt-2 text-[color:var(--copy)]">We received your details and will reach out shortly.</p>
-          </div>
-        `;
-      } catch (err) {
-        console.error(err);
-        const code = err && err.status ? ` (HTTP ${err.status})` : '';
-        statusEl.textContent = `Could not submit form${code}. Please try again.`;
-        if (debugMode) clientLog.textContent += `
+  const r = await submitLead(payload);
+
+  // Fire Google Ads conversion
+  if (window.gtag_report_conversion) {
+    try { gtag_report_conversion(); } catch (_) {}
+  }
+
+  // Show confirmation UI
+  document.getElementById('form').innerHTML = `
+    <div class="p-10 text-center">
+      <h2 class="text-2xl font-semibold">Thank you! We'll be in touch.</h2>
+      <p class="mt-2 text-[color:var(--copy)]">We received your details and will reach out shortly.</p>
+    </div>
+  `;
+} catch (err) {
+  console.error(err);
+  const code = err && err.status ? ` (HTTP ${err.status})` : '';
+  statusEl.textContent = `Could not submit form${code}. Please try again.`;
+  if (debugMode) clientLog.textContent += `
 
   CLIENT ERROR
   ${JSON.stringify(err,null,2)}`;
-      } finally {
-        if (document.getElementById('submitBtn')) {
-          btn.disabled = false; btn.classList.remove('opacity-70');
-        }
-      }
+} finally {
+  if (document.getElementById('submitBtn')) {
+    btn.disabled = false; btn.classList.remove('opacity-70');
+  }
+}
     });
   </script>
 
