Revise form header for clarity on grant application
Updated the form header to better describe the service offered.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@ function gtag_report_conversion(url) {
         <h1 class="mt-3 text-4xl md:text-5xl font-bold tracking-tight leading-[1.1]">Secure Funding Faster</h1>
 
         <form id="lead-form" novalidate>
-          <h2 class="text-xl font-semibold">Tell us about your company to get a free walkthrough of the Scout AI grant writing engine.</h2>
+          <h2 class="text-xl font-semibold">Scout simplifies applying for grants with AI and our expert writers. Tell us about your company to speak to a member of our team and get a free demo of the Scout AI grant writing engine.
+</h2>
           <!-- Name / Email -->
           <div class="mt-6 grid grid-cols-1 sm:grid-cols-2 gap-4">
             <div>
