--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     posthog.init('phc_BIzfHIzmJ9kCdXuYHuinRsLY7SeqNBPYHVvAFSrWDyL', {
         api_host: 'https://us.i.posthog.com',
         defaults: '2025-05-24',
-        person_profiles: 'identified_only', // or 'always' to create profiles for anonymous users as well
+        person_profiles: 'always', // or 'always' to create profiles for anonymous users as well
     })
 </script>
   <script>
